added to read me and worked on js

--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
 </head>
 
 <body>
-    <div>
+
+    <h1> My Psychic game</h1>
+    <img src="assets/images/The-Psychic-ghostbusters.gif" alt="Girl in a jacket" width="500" height="600">
+
+    <div id="container">
 
         <p id="directions-text"> Guess the letter I have in mind and you win. You can start by pressing any key </p>
-        <p id="userchoice-text"></p>
         <p id="compchoice-text"></p>
         <p id="wins-text"> </p>
         <p id="losses-text"> </p>
         <p id="guessesLeft-text"></p>
         <p id="yourguess-text"></p>
+        <p id="userchoice-text"></p>
 
     </div>
 
